--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,7 +1,7 @@
 <div class="container">
   <div class="row">
     <div class="col">
-      Content
+      <router-outlet></router-outlet>
     </div>
   </div>
 </div>
